<resources>
    <string name="app_name">계좌 스캐너</string>
    <string name="wrong_bank_account_alert_message"><u>계좌 정보 및 예금주명을 꼭 확인해주세요.</u></string>
    <string name="copy_button_label">복사하기</string>
    <string name="recapture_button_label">다시찍기</string>
    <string name="permission_not_checked_toast_label">필요한 권한이 승인되지 않았습니다.</string>
    <string name="camera_take_picture_button_label">캡쳐하기</string>
    <string name="bank_name_label">은행명</string>
    <string name="bank_account_label">계좌번호</string>
    <string name="check_bank_title">계좌번호 확인하기</string>
    <string name="rendered_bank_name_hint">코봉은행</string>
    <string name="rendered_bank_account_hint">000000000000</string>
    <string name="kakaobank_logo_label">카카오뱅크</string>
    <string name="toss_logo_label">토스</string>
    <string name="share_logo_label">공유하기</string>
    <string name="bank_account_copied">복사되었습니다.</string>
    <string name="capture_guide">틀 안에 계좌번호와 은행이\n포함되도록 찍어주세요!</string>
    <string name="progress_dialog_label">계좌정보 인식 중</string>
    <string name="error_unknown_debug">알 수 없는 오류가 발생했습니다(%1$s)</string>
    <string name="error_unknown_release">알 수 없는 오류가 발생했습니다.</string>
    <string name="error_camera_exception">카메라 정보를 불러오는 중 문제가 발생했습니다.</string>
    <string name="error_external_app_not_installed_exception">해당 앱이 설치되지 않았습니다.</string>
    <string name="error_http_bad_response_exception">서버 요청이 실패했습니다.</string>
    <string name="dialog_alert_before_start_title">시작하기에 앞서...</string>
    <string name="dialog_alert_before_start_content1">인식된 계좌는 실제 계좌와 상이할 수 있습니다.</string>
    <string name="dialog_alert_before_start_content2">바르게 쓴 글씨일수록 인식률이 높아집니다.</string>
    <string name="dialog_alert_before_start_confirm">확인</string>
    <string name="dialog_onboarding_guide_title">사진 촬영 가이드</string>
    <string name="dialog_onboarding_guide_content1">반드시 틀 안에 계좌번호/은행명만</string>
    <string name="dialog_onboarding_guide_content2">포함되도록 촬영해주세요!</string>
    <string name="dialog_onboarding_guide_confirm">이해했습니다!</string>
</resources>
