<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorGreyLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/background_dialog"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="14dp"
                android:text="@string/dialog_alert_before_start_title"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.03"
                android:text="@string/dialog_alert_before_start_content1"
                android:textColor="@color/colorGreyDark"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="28dp"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.03"
                android:text="@string/dialog_alert_before_start_content2"
                android:textColor="@color/colorGreyDark"
                android:textSize="16sp" />

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="22dp"
                android:background="@drawable/background_primary_button"
                android:text="@string/dialog_alert_before_start_confirm"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>
</layout>
